--- a/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
+++ b/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
@@ -3,7 +3,7 @@
 <Form version="1.2" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.PanelFormInfo">
   <Properties>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[300, 30]"/>
+      <Dimension value="[512, 30]"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -41,7 +41,8 @@
               <Component id="fpsLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="fpsField" min="-2" pref="34" max="-2" attributes="0"/>
-              <EmptySpace pref="137" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="statusLineLabel" pref="181" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -56,6 +57,7 @@
           <Group type="103" alignment="0" groupAlignment="3" attributes="0">
               <Component id="fpsField" alignment="3" min="-2" max="-2" attributes="0"/>
               <Component id="fpsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Component id="statusLineLabel" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -69,7 +71,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/org/micromanager/icons/application_view_list.png"/>
         </Property>
-        <Property name="toolTipText" type="java.lang.String" value="View metadata and notes"/>
+        <Property name="toolTipText" type="java.lang.String" value="View metadata and edit comments"/>
         <Property name="focusable" type="boolean" value="false"/>
         <Property name="horizontalTextPosition" type="int" value="0"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -163,6 +165,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="fpsField">
+      <Properties>
+        <Property name="toolTipText" type="java.lang.String" value="Set the speed at which the acquisition is played back."/>
+      </Properties>
       <Events>
         <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="fpsFieldFocusLost"/>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="fpsFieldKeyReleased"/>
@@ -181,7 +186,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/org/micromanager/icons/control_pause.png"/>
         </Property>
-        <Property name="toolTipText" type="java.lang.String" value="View metadata and notes"/>
+        <Property name="toolTipText" type="java.lang.String" value="Pause acquisition"/>
         <Property name="focusable" type="boolean" value="false"/>
         <Property name="horizontalTextPosition" type="int" value="0"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -207,7 +212,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/org/micromanager/icons/cancel.png"/>
         </Property>
-        <Property name="toolTipText" type="java.lang.String" value="View metadata and notes"/>
+        <Property name="toolTipText" type="java.lang.String" value="Stop acquisition"/>
         <Property name="focusable" type="boolean" value="false"/>
         <Property name="horizontalTextPosition" type="int" value="0"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -224,6 +229,13 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="abortButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="statusLineLabel">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Lucida Grande" size="10" style="0"/>
+        </Property>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
